cases - test edit to download metrics for cases by age and sex

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -728,10 +728,8 @@ cards:
       start of the pandemic, by age and sex.
 
     download:
-      - femaleCasesValue 
-      - femaleCasesRate
-      - maleCasesValue
-      - maleCasesRate
+      - femaleCases 
+      - maleCases
 
     tabs: 
       - heading: Chart
