restricted new dev-only block cases chart to display for England only.

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -659,6 +659,12 @@ cards:
   - heading: Newly reported and total daily cases by specimen date
     cardType: chart
     fullWidth: true
+    locationAware:
+      included:
+        areaType:
+          - nation
+        areaName:
+          - England
 
     download:
       - newCasesBySpecimenDate
